<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.laokou</groupId>
    <artifactId>laokou-network</artifactId>
    <version>4.0.3-SNAPSHOT</version>
  </parent>

  <artifactId>laokou-network-infrastructure</artifactId>
  <version>4.0.3-SNAPSHOT</version>

  <dependencies>
    <dependency>
      <groupId>io.vertx</groupId>
      <artifactId>vertx-mqtt</artifactId>
    </dependency>
    <dependency>
      <groupId>io.vertx</groupId>
      <artifactId>vertx-web</artifactId>
    </dependency>
    <dependency>
      <groupId>io.vertx</groupId>
      <artifactId>vertx-kafka-client</artifactId>
    </dependency>
    <dependency>
      <groupId>io.vertx</groupId>
      <artifactId>vertx-rabbitmq-client</artifactId>
    </dependency>
    <dependency>
      <groupId>org.laokou</groupId>
      <artifactId>laokou-common-core</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.laokou</groupId>
      <artifactId>laokou-network-domain</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.laokou</groupId>
      <artifactId>laokou-common-trace</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.laokou</groupId>
      <artifactId>laokou-common-cors</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.laokou</groupId>
      <artifactId>laokou-common-idempotent</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.laokou</groupId>
      <artifactId>laokou-common-mybatis-plus</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.laokou</groupId>
      <artifactId>laokou-common-log</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.laokou</groupId>
      <artifactId>laokou-common-domain</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.laokou</groupId>
      <artifactId>laokou-common-i18n</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.laokou</groupId>
      <artifactId>laokou-common-security</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.laokou</groupId>
      <artifactId>laokou-common-openapi-doc</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.laokou</groupId>
      <artifactId>laokou-common-kafka</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.laokou</groupId>
      <artifactId>laokou-common-prometheus</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.laokou</groupId>
      <artifactId>laokou-network-client</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-webmvc</artifactId>
      <exclusions>
        <exclusion>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-to-slf4j</artifactId>
        </exclusion>
        <exclusion>
          <groupId>ch.qos.logback</groupId>
          <artifactId>logback-classic</artifactId>
        </exclusion>
        <exclusion>
          <groupId>ch.qos.logback</groupId>
          <artifactId>logback-core</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>jakarta.servlet</groupId>
      <artifactId>jakarta.servlet-api</artifactId>
    </dependency>
    <dependency>
      <groupId>com.github.ulisesbocchio</groupId>
      <artifactId>jasypt-spring-boot-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
      <exclusions>
        <exclusion>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-logging</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.laokou</groupId>
      <artifactId>laokou-common-nacos</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.laokou</groupId>
      <artifactId>laokou-common-pulsar</artifactId>
      <version>${project.version}</version>
    </dependency>
  </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>25</source>
                    <target>25</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
